--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="container">
-        <div class="spacer-div" style="height: 250px;"></div>
+        <div class="spacer-div" style="height: 270px;"></div>
         <div class="countdown-timer">
             <div class="countdown-segment">
                 <div id="days" class="countdown-value">00</div>
@@ -69,7 +69,7 @@
             </div>
             
             <div class="footer-center">
-                <a href="#" class="music-platform">
+                <!-- <a href="#" class="music-platform">
                     <i class="fab fa-spotify"></i>
                     <span>Spotify</span>
                 </a>
@@ -79,12 +79,12 @@
                 </a>
                 <a href="#" class="music-platform">
                     <i class="fas fa-music"></i>
-                    <span>Tidal</span>
+                    <span>Tidal</span> -->
                 </a>
             </div>
             
             <div class="footer-right">
-                <a href="mailto:contact@heyheyband.com">contact@heyheyband.com</a>
+                <a href="mailto:contact@heyheyband.com">heyheycontactbooking@gmail.com</a>
             </div>
         </div>
     </footer>
