update spacer-div background color to transparent

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         
         <a href="https://distrokid.com/hyperfollow/heyhey1/the-way-i-felt?utm_campaign=website&utm_medium=Email+&utm_source=SendGrid&fbclid=PAZXh0bgNhZW0CMTEAAaZdLiCZkZUfQt_bgj9GDaudU7HS58rSTXGiuezMRMJqlbZnTnIxorUO7Ls_aem_anJvM8RMtsyr5yT6G3JOGg" target="_blank" class="music-button">Presave "The Way I Felt"</a>
-        <div class="spacer-div" style="height: 80px;"></div>
+        <div class="spacer-div" style="height: 80px; background-color: transparent;"></div>
 
     </div>
     <footer class="footer">
